# TimeTrackBundle

./: .gitignore  Dockerfile  Makefile  README.md  composer.json  docker-compose.yml  phpstan-baseline.neon  phpunit.xml.dist
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  --support-question.md
.github/workflows/: ci.yml  release.yml
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
demo/: Makefile
demo/symfony8/: .env.example  Makefile  composer.json  docker-compose.yml
desktop/: .env.example  .gitignore  README.md  index.html  main.js  package.json  pnpm-lock.yaml  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BROWSER-EXTENSION.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DESKTOP-AGENT.md  ENGRAM.md  INSTALLATION.md  RELEASE.md  SECURITY.md  SPEC-DRIVEN-DEVELOPMENT.md  SPEC-KIT.md  TASK-BOARD-INTEGRATION.md  UPGRADING.md  USAGE.md
extension/: README.md
extension/chrome/: background.js  manifest.json  popup.html  popup.js
specs/001-baseline/: code-inventory.md  spec.md
src/: TimeTrackBundle.php
src/Bridge/: NullTeamContextProvider.php  StubTaskProvider.php
src/Client/: ClientAuthResult.php  ClientAuthenticatorInterface.php  ClientLoginRateLimiter.php  ClientResponseFactory.php  DefaultClientAuthenticator.php
src/Command/: PurgeExpiredClientTokensCommand.php
(+85 files in other folders)
