[package]
name = "nowo-time-track-desktop"
version = "0.1.0"
description = "Nowo TimeTrack desktop tray agent"
authors = ["Nowo.tech"]
edition = "2021"

[lib]
name = "nowo_time_track_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
